# fs-mcp-server

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md  allowed_dirs.conf  build_and_run.sh  config.txt  demo.sh  manual_test.rs  run_manual_test.sh  run_test.sh  run_tests.sh  run_with_config.sh  test_server.sh
examples/: edit_client.rs  enhanced_client.rs  simple_client.rs
src/: main.rs
src/tools/: copy.rs  delete.rs  edit.rs  info.rs  list.rs  list_allowed_dirs.rs  mkdir.rs  mod.rs  move_file.rs  read.rs  search.rs  write.rs
src/utils/: path.rs
tests/: integration.rs  integration_test.rs
