[package]
name = "fs-mcp-server"
version = "0.1.0"
edition = "2021"
description = "A secure MCP server for filesystem operations"
authors = ["Colin Rozzi"]
license = "MIT"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "enhanced_client"
path = "examples/enhanced_client.rs"

[dependencies]
mcp-protocol = { git = "https://github.com/colinrozzi/rust-mcp" }
mcp-server = { git = "https://github.com/colinrozzi/rust-mcp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
glob = "0.3"
walkdir = "2.4"
regex = "1.10"
chrono = "0.4"
encoding_rs_io = "0.1"
num_cpus = "1.16"
atty = "0.2"
tempfile = "3.8"
base64 = "0.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
mcp-client = { git = "https://github.com/colinrozzi/rust-mcp" }
tokio = { version = "1.28", features = ["full"] }
